Fluid flow: Fixed: Pipe pressure can become negative
# 0.00.33 (57585) Oct 12, 2011
Addressed review issues, see #3097
Switched to use piccolo slider instead of swing slider to avoid mac problems, see #3101 #3097
# 0.00.32 (57091) Sep 30, 2011
Water tower: Fixed: Sometimes repeated clicks on the "Fill" button don't work when the door is open
# 0.00.31 (57080) Sep 29, 2011
Flow tab: Changed flow speed calculation from speed = flowRate / crossSectionalHeight to speed = flowRate / crossSectionalArea
# 0.00.30 (57029) Sep 29, 2011
Water tower: Control the hose with handles instead of dragging the hose itself
Water tower: Start the tank partly full so that the "fill" button and faucet slider are initially enabled
# 0.00.29 (56846) Sep 22, 2011
Water tower: Added new handle image from NP
Flow tab: Made the red stripe go all the way to the edges, since friction is accounted for elsewhere
Pressure tab: Made pool gradient darker so it doesn't blend in with the air too much
# 0.00.28 (56834) Sep 22, 2011
Water tower: Fixed: Water drops go in front of the ground
# 0.00.27 (56770) Sep 20, 2011
Fluid flow: Fixed: Velocity sensor disappears if the blue velocity arrow overlaps the toolbox when dropped
# 0.00.26 (56717) Sep 19, 2011
Fluid flow: Fixed: speed doesn't update when dragging fluid flow slider or toggling friction
# 0.00.25 (56688) Sep 19, 2011
Fluid flow: Fixed: Exception when setting fluid flow rate to zero
# 0.00.24 (56682) Sep 19, 2011
Fluid flow: Fixed: Exception when dragging the fluid flow rate slider on mac
# 0.00.23 (56552) Sep 14, 2011
# 0.00.22 (56499) Sep 13, 2011
Water tower: Made the velocity sensor read out "-" instead of "0.00" when not over a moving fluid
Water tower: Ignore speed readout for water coming out of the faucet
Water tower: Fixed: Speed for water coming out of the faucet varies erratically
# 0.00.21 (56380) Sep 9, 2011
Pressure tab: When in "atmospheres" units, use metric for fluid density